--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "animate.css": "^3.7.2",
     "axios": "^0.15.3",
     "babel-plugin-transform-class-properties": "^6.23.0",
+    "chart.js": "^2.9.3",
     "classnames": "^2.2.3",
     "flexboxgrid": "^6.3.0",
     "formatjs": "^0.1.1",
@@ -123,6 +124,7 @@
     "react-addons-shallow-compare": "^15.4.2",
     "react-async-script": "^0.6.0",
     "react-big-calendar": "^0.17.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^15.0.1",
     "react-flexbox-grid": "^0.10.2",
     "react-google-recaptcha": "^0.8.0",
