--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/IASColombia/MS_AYAX_BANCOLOMBIA"
   },
   "scripts": {
-    "test": "nyc --reporter=lcov --reporter=text-lcov mocha --require babel-core/register --require ./test/setup.js --require ignore-styles ./test/**/*.spec.js",
+    "test": "nyc --reporter=lcov --reporter=text-lcov mocha --exit --require babel-core/register --require ./test/setup.js --require ignore-styles ./test/**/*.spec.js",
     "testdev": "mocha --watch --recursive --require babel-core/register --require ./test/setup.js --require ignore-styles ./test/**/*.spec.js",
     "build": "better-npm-run develop",
     "start": "node server.js",
