--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "react-dom": "^15.0.1",
     "react-flexbox-grid": "^0.10.2",
     "react-google-recaptcha": "^0.8.0",
+    "react-highlight-words": "^0.16.0",
     "react-intl": "^1.2.2",
     "react-mentions": "^3.3.1",
     "react-modal": "^1.0.0",
